<resources>
    <string name="app_name">Hiba\'s Coffee House</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_hiba_s_coffee_house">Welcome To Hiba\'s Coffee House</string>
    <string name="welcome_to_nhiba_s_coffe_house">Welcome To\nHiba\'s Coffe House</string>
    <string name="welcome_to_hiba_s_coffe_house" />
    <string name="welcome_To_Hiba_s_Coffee_House">Welcome_To_Hiba\'s_Coffee_House</string>
    <string name="todo1">TODO</string>
    <string name="welcome_to_nhiba_s_coffe_house1">Welcome To\nHiba\'s Coffe House</string>
    <string name="get_started">Get_Started</string>
    <string name="item_image" />
    <string name="admin_signup">Admin Signup</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount">Amount</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="admin_name">Admin Name</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="enter_admin_name">Enter Admin Name</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="insert_coffee">Insert Coffee</string>
    <string name="view_n_update_n_delete_n_coffee">View\n Update\n Delete\n Coffee</string>
    <string name="delete_product">Delete Product</string>
    <string name="search">Search</string>
    <string name="product_image">Product Image</string>
    <string name="to_delete_search_a_product_by_name">To delete, search a product by name</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="menu_display">Menu Display</string>
    <string name="notifications">Notifications</string>
    <string name="order_placement">Order Placement</string>
    <string name="payment">Payment</string>
    <string name="reservation">Reservation</string>
    <string name="choose_your_facilities">Choose Your Facilities</string>
    <string name="back1">Back</string>
    <string name="insert_product">Insert Product</string>
    <string name="select_image">Select Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="find_your_best_coffee_in_nsylhet_town">Find your Best Coffee In \nSylhet Town</string>
    <string name="get_started1">Get Started</string>
    <string name="admin">Admin</string>
    <string name="welcome_to_hiba_s_coffee_house1">welcome to hiba\'s coffee house</string>
    <string name="choose_your_coffee_to_order">Choose your coffee to order</string>
    <string name="back2">Back</string>
    <string name="submit1">Submit</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="password1">password</string>
    <string name="username">username</string>
    <string name="sign_up">Sign Up</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="notification_text">Notification Text</string>
    <string name="notification_title">Notification Title</string>
    <string name="user_login">User Login</string>
    <string name="user_name">User Name</string>
    <string name="password2">Password</string>
    <string name="back3">Back</string>
    <string name="enter_password">Enter password</string>
    <string name="submit2">Submit</string>
    <string name="enter_username">Enter Username</string>
    <string name="place_order">Place Order</string>
    <string name="order_instructions">Order Instructions</string>
    <string name="product_name1">Product Name</string>
    <string name="product_price1">Product Price</string>
    <string name="product_quantity1">Product Quantity</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="date_mm_dd_yyyy">Date (MM/DD/YYYY)</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="special_requests">Special Requests</string>
    <string name="time_hh_mm_am_pm">Time (HH:MM AM/PM)</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="back4">Back</string>
    <string name="login">Login</string>
    <string name="sign_up1">Sign Up</string>
    <string name="start_your_day_with_n_a_perfect_coffee">Start your day with\n a perfect coffee</string>
    <string name="search1">Search</string>
    <string name="select_image1">Select Image</string>
    <string name="update_product">Update Product</string>
    <string name="product_name2">Product Name</string>
    <string name="product_price2">Product Price</string>
    <string name="product_quantity2">Product Quantity</string>
    <string name="product_image1">Product Image</string>
    <string name="to_update_search_a_product_by_name">To update, search a product by name</string>
    <string name="product_id1">Product ID</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>