<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CEA6AFE3"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/admin_signup"
        android:textSize="18sp"
        android:textColor="#000000" />

    <!-- Username  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_name"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/enter_admin_name"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Password  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="18sp"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="100dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Back Button -->
    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        android:backgroundTint="#757575"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
