<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/one"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="156dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="250dp"
        android:text="@string/welcome_to_hiba_s_coffee_house1"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />
    <TextView
        android:id="@+id/Special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/find_your_best_coffee_in_nsylhet_town"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started1"
        android:textSize="19sp"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000" />
    <Button
        android:id="@+id/button_Admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textSize="19sp"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000" />

</RelativeLayout>
