<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="48dp"
    tools:context=".Payment">

    <!-- Card Number -->
    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/card_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Expiry Date -->
    <EditText
        android:id="@+id/editTextExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/expiry_date_mm_yy"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <!-- CVV -->
    <EditText
        android:id="@+id/editTextCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:padding="8dp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Amount -->
    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Pay Button -->
    <Button
        android:id="@+id/buttonPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>