<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEB3B">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text= "@string/start_your_day_with_n_a_perfect_coffee"
        android:textColor="#673AB7"
        android:textSize="36sp"
        android:textStyle="italic|bold" />

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="#80000000"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop"
        android:src="@drawable/photo6" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/button_SignUp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:text="@string/sign_up1"
            android:textSize="22sp"
            android:backgroundTint="#EDF1F0"
            android:textColor="#000000"
            android:layout_marginEnd="32dp"
            android:paddingStart="32dp"

            android:paddingEnd="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/button_Login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:text="@string/login"
            android:textSize="22sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />
    </LinearLayout>
    <Button
        android:id="@+id/button_Back"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/back4"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />
</LinearLayout>
